core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__select_statement-4.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(r#\"SELECT COUNT(DISTINCT value) FROM temp\"#)"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_select_statement
- pre_visit_select_field_list
- pre_visit_select_field
- pre_visit_expr
- pre_visit_call
- pre_visit_expr
- post_visit_expr
- post_visit_call
- post_visit_expr
- post_visit_select_field
- post_visit_select_field_list
- pre_visit_select_from_clause
- pre_visit_select_measurement_selection
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_select_measurement_selection
- post_visit_select_from_clause
- post_visit_select_statement
- post_visit_statement
