core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_field_keys_statement-4.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW FIELD KEYS ON telegraf FROM /cpu/\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_field_keys_statement
- pre_visit_on_clause
- post_visit_on_clause
- pre_visit_show_from_clause
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_show_from_clause
- post_visit_show_field_keys_statement
- post_visit_statement
